# fast-parcel-capt

./: .gitignore  pyproject.toml
src/: db.sqlite3
src/config/: settings.py  urls.py
src/p_apps/core/: apps.py  urls.py  views.py
src/p_apps/user_auth/: apps.py  urls.py  views.py
src/templates/account/: login.html  logout.html  profile.html  signup.html
src/templates/allauth/elements/: button.html
src/templates/core/: base.html  courier.html  customer.html  index.html
