[tool.poetry]
name = "fast-parcel"
version = "0.1.0"
description = ""
authors = ["carlos_APT <capimentel64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
django = "4.2.7"
django-bootstrap-v5 = "^1.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
